# medyx

./: .env  .env.example  .gitignore  MODALITY_FORMAT.md  NEO4J_SETUP.md  PARAM_SHAKTI_SETUP.md  README.md  download_ckpts.ps1  download_ckpts.sh  environment.yml  pyproject.toml  requirements.txt  requirements_cluster.txt  run_diagnosis_example.py  run_job.example.sh  run_job.sh  run_mas_diagnosis.py  setup_login.sh  test_dummy_run.py
config/: __init__.py  experts.yaml  models.yaml  settings.py
core/: __init__.py  interfaces.py  schemas.py
infrastructure/: __init__.py  llm_factory.py
infrastructure/rag/: __init__.py  neo4j_retriever.py
infrastructure/vision/: __init__.py  medsam2_engine.py  vision_provider.py
scripts/: git_sync_cluster.sh
services/: __init__.py  manager.py  mas_orchestrator.py  squad.py
tests/: __init__.py  evaluate_vision_model.py  test_vision_engine.py
ui/: app.py
